Closed Bug 1151182 Opened 9 years ago Closed 9 years ago

Unexistent type "Exceptions" for JSOP_THROWMSG documentation comment.

Categories

(Core :: JavaScript Engine, defect)

38 Branch
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: arai, Assigned: arai)

Details

Attachments

(1 file)

>     /*
>      * Sometimes we know when emitting that an operation will always throw.
>      *
>      * Throws the indicated JSMSG.
>      *
>      *   Category: Statements
>      *   Type: Exceptions
>      *   Operands: uint16_t msgNumber
>      *   Stack: =>
>      */ \
>     macro(JSOP_THROWMSG,   74, "throwmsg",    NULL,         3,  0,  0, JOF_UINT16) \

it should be "Exception Handling".
Already updated documentation with fixed source.
https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey/Internals/Bytecode
Assignee: nobody → arai.unmht
Attachment #8588280 - Flags: review?(efaustbmo)
Comment on attachment 8588280 [details] [diff] [review]
Fix type for JSOP_THROWMSG documentation comment.

Review of attachment 8588280 [details] [diff] [review]:
-----------------------------------------------------------------

Cheers. Thanks.
Attachment #8588280 - Flags: review?(efaustbmo) → review+
https://hg.mozilla.org/mozilla-central/rev/cc3ee5953d69
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: