Bug 1151182 - Fix type for JSOP_THROWMSG documentation comment. r=efaust