js/src/vm/Opcodes.h
@@ -682,7 +682,7 @@
      * Throws the indicated JSMSG.
      *
      *   Category: Statements
-     *   Type: Exceptions
+     *   Type: Exception Handling
      *   Operands: uint16_t msgNumber
      *   Stack: =>
      */ \
